--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,9 @@
-RewriteEngine on
-
-RewriteCond %{REQUEST_FILENAME}  -f [OR]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ public/index.php [L,QSA]
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    RewriteBase /
+    RewriteRule ^index\.php$ - [L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule . /index.php [L]
+</IfModule>
